--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -1,98 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:orientation="vertical"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".DetailFragment"
-        android:background="@color/background">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        tools:context=".details.MovieDetailFragment">
 
-        <!-- movie title-->
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/title_textview"
-            style="@style/detailHeader" />
+            android:orientation="horizontal"
+            android:paddingLeft="@dimen/detail_horizontal_margin"
+            android:paddingRight="@dimen/detail_horizontal_margin">
 
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/scrollView"
-            android:layout_gravity="center_horizontal"
-            android:fillViewport="false">
-
+            <ImageView
+                android:id="@+id/movie_poster"
+                android:layout_width="@dimen/movie_poster_width_for_detail"
+                android:layout_height="@dimen/movie_poster_height_for_detail"
+                android:layout_marginBottom="@dimen/movie_poster_vertical_padding"
+                android:layout_marginRight="@dimen/movie_poster_padding_right"
+                android:scaleType="fitXY" />
 
             <LinearLayout
-                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-                <LinearLayout
-                    android:orientation="vertical"
-                    style="@style/LayoutTheme">
+                <TextView
+                    android:id="@+id/movie_title"
+                    style="?android:attr/textAppearanceMedium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/detail_title_bottom_margin"
+                    android:layout_marginLeft="@dimen/detail_title_left_padding"
+                    android:textColor="@color/text_color_for_movie_overview"
+                    android:textIsSelectable="true"
+                    android:textStyle="bold" />
 
-                    <LinearLayout
-                        android:orientation="horizontal"
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:paddingBottom="@dimen/activity_vertical_margin"
-                        android:paddingLeft="@dimen/activity_horizontal_margin"
-                        android:paddingTop="@dimen/activity_vertical_margin"
-                        android:paddingRight="@dimen/activity_horizontal_margin"
-                        android:layout_gravity="center_horizontal"
-                        android:weightSum="1">
-
-                        <ImageView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/image_poster"
-                            android:layout_weight="1"
-                            android:adjustViewBounds="true"
-                            style="@style/detailPoster"
-                            />
-
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:layout_gravity="center_vertical|right"
-                        android:layout_marginRight="35dp">
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/ratings_view"
-                            style="@style/detailRating"
-                            android:layout_gravity="left" />
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/release_date"
-                            style="@style/detailYear"
-                            android:layout_gravity="right" />
-                    </LinearLayout>
-
-                </LinearLayout>
-
-                <!---synopsis-->
-
-                <LinearLayout
-                    android:orientation="vertical"
+                <include layout="@layout/rating" />
+                <Button
+                    android:id="@+id/button_watch_trailer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="right">
+                    android:layout_marginBottom="@dimen/button_vertical_margin"
+                    android:enabled="false"
+                    android:text="@string/watch_trailer"
+                    android:theme="@style/Button.ColorPrimary" />
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/synopsis"
-                        style="@style/detailSynopsis"/>
-
-                </LinearLayout>
 
             </LinearLayout>
-        </ScrollView>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingLeft="@dimen/detail_horizontal_margin"
+            android:paddingRight="@dimen/detail_horizontal_margin">
+
+            <TextView
+                android:id="@+id/movie_vote_average"
+                style="?android:attr/textAppearanceMedium"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/text_color_for_movie_overview"
+                android:textIsSelectable="true" />
+
+            <TextView
+                android:id="@+id/movie_release_date"
+                style="?android:attr/textAppearanceMedium"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/movie_date_vertical_padding"
+                android:textColor="@color/text_color_for_movie_overview"
+                android:textIsSelectable="true" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/movie_overview"
+            style="?android:attr/textAppearanceMedium"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingLeft="@dimen/detail_horizontal_margin"
+            android:paddingRight="@dimen/detail_horizontal_margin"
+            android:paddingTop="@dimen/movie_overview_padding_top"
+            android:textColor="@color/text_color_for_movie_overview"
+            android:textIsSelectable="true" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/trailer_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/trailer_list_vertical_padding"
+            tools:listitem="@layout/recyclerview_trailer" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/review_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/trailer_list_vertical_padding"
+            tools:listitem="@layout/review_content"
+            android:clipChildren="true" />
+
 
     </LinearLayout>
+</ScrollView>
