--- a/app/src/main/res/menu/main_detail.xml
+++ b/app/src/main/res/menu/main_detail.xml
@@ -3,9 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".DetailActivity">
+
     <item
-        android:id="@+id/action_setting"
-        android:orderInCategory="100"
-        android:title="@string/activity_settings"
-        app:showAsAction="never" />
+        android:id="@+id/favorite_icon"
+        android:icon="@drawable/ic_favorite_hallow_name"
+        app:showAsAction="always"
+        android:title="@string/action_fav">
+    </item>
+    <item
+        android:id="@+id/action_share"
+        android:icon="@drawable/ic_share_black_24dp"
+        android:title="@string/share_trailer"
+        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
+        app:showAsAction="ifRoom" />
 </menu>
+
