--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,8 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:icon="@drawable/ic_sort_black_24dp"
+        android:title="@string/sort_by"
+        app:showAsAction="ifRoom">
+        <menu>
+            <group
+                android:id="@+id/menu_sort_by"
+                android:checkableBehavior="single">
+    <item
+        android:id="@+id/action_sort_user_rating"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/action_sort_user_rating"
+        />
+    <item
+        android:id="@+id/action_sort_popularity"
+        android:orderInCategory="80"
+        android:title="@string/action_sort_popularity"
+        />
+    <item
+        android:id="@+id/action_favorite"
+        android:title="@string/action_favorite"
+        android:orderInCategory="2"
         app:showAsAction="never" />
+            </group>
+        </menu>
+    </item>
 </menu>
