--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -3,10 +3,12 @@
     <string-array name="sortArray">
         <item>@string/sort_array_item_1</item>
         <item>@string/sort_array_item_2</item>
+        <item>@string/sort_array_item_3</item>
     </string-array>
 
     <string-array name="sortArrayValues">
         <item>@string/pref_popular_value</item>
         <item>@string/pref_top_rated_value</item>
+        <item>@string/pref_favorite_value</item>
     </string-array>
 </resources>
