--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,29 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="app_bar_height">200dp</dimen>
+    <dimen name="movie_poster_padding_right">16dp</dimen>
+    <dimen name="movie_poster_vertical_padding">16dp</dimen>
+    <dimen name="movie_overview_padding_top">16dp</dimen>
+    <dimen name="movie_date_vertical_padding">16dp</dimen>
+    <dimen name="trailer_list_vertical_padding">16dp</dimen>
+    <dimen name="movie_poster_width_for_detail">140dp</dimen>
+    <dimen name="movie_poster_height_for_detail">210dp</dimen>
+    <dimen name="movie_title_padding_for_grid">16dp</dimen>
+    <dimen name="grid_item_movie_height">280dp</dimen>
+    <dimen name="trailer_width_for_detail">150dp</dimen>
+    <dimen name="text_size">18sp</dimen>
+    <dimen name="text_padding">5dp</dimen>
+    <integer name="grid_number_cols">2</integer>
+    <dimen name="trailer_height_for_detail">100dp</dimen>
+    <dimen name="review_vertical_padding">16dp</dimen>
+    <dimen name="detail_horizontal_margin">16dp</dimen>
+    <dimen name="detail_vertical_padding">16dp</dimen>
+    <dimen name="detail_horizontal_padding">8dp</dimen>
+    <dimen name="button_height">36dp</dimen>
+    <dimen name="button_horizontal_padding">16dp</dimen>
+    <dimen name="button_vertical_padding">0dp</dimen>
+    <dimen name="button_vertical_margin">16dp</dimen>
+    <dimen name="detail_title_left_padding">4dp</dimen>
+    <dimen name="detail_title_bottom_margin">4dp</dimen>
 </resources>
